@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-07-12T08:11:43Z",
-  "count" : 5,
-  "count_minmax" : [ 5, 34 ],
-  "count_decinc" : [ -29, +34 ],
-  "uniques" : 3,
-  "uniques_minmax" : [ 3, 19 ],
-  "uniques_decinc" : [ -16, +19 ]
+  "timestamp" : "2023-07-12T16:10:43Z",
+  "count" : 1,
+  "count_minmax" : [ 1, 34 ],
+  "count_decinc" : [ -33, +34 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 19 ],
+  "uniques_decinc" : [ -18, +19 ]
 }
