@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2023-07-12T08:11:43Z",
+  "timestamp" : "2023-07-12T16:10:43Z",
   "count_outdated" : 4743,
   "uniques_outdated" : 1358,
-  "count" : 4818,
+  "count" : 4819,
   "uniques" : 1404,
   "clones" : [
     {
       "timestamp": "2023-06-28T00:00:00Z",
-      "count": 5,
-      "count_minmax": [ 5, 34 ],
-      "count_decinc": [ 29, 34 ],
-      "uniques": 3,
-      "uniques_minmax": [ 3, 19 ],
-      "uniques_decinc": [ 16, 19 ]
+      "count": 1,
+      "count_minmax": [ 1, 34 ],
+      "count_decinc": [ 33, 34 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 19 ],
+      "uniques_decinc": [ 18, 19 ]
     },
     {
       "timestamp": "2023-06-29T00:00:00Z",
@@ -106,9 +106,9 @@
     },
     {
       "timestamp": "2023-07-12T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
