@@ -1,11 +1,11 @@
 {
-  "count": 46,
-  "uniques": 22,
+  "count": 43,
+  "uniques": 20,
   "clones": [
     {
       "timestamp": "2023-06-28T00:00:00Z",
-      "count": 5,
-      "uniques": 3
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2023-06-29T00:00:00Z",
@@ -59,7 +59,7 @@
     },
     {
       "timestamp": "2023-07-12T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
