@@ -1,3 +1,12 @@
+2023-07-12T16:10:43Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5533919535 # 1717
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-12
+* notice: last 14d: unq all: 20 43
+* notice: prev accum: outdated-unq outdated-all / unq all: 1358 4743 / 1404 4818
+* notice: next accum: outdated-unq outdated-all / unq all: 1358 4743 / 1404 4819
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -2 -4 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2023-06-28 2023-07-12]
+
 2023-07-12T08:11:43Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5529175436 # 1716
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-12
